  "Keep on Top" option is active.
- Added ability to browse for files/directories in the WPrefs menu editor.
- Added Czech translations of documentation (Jiri Hnidek <Jiri.Hnidek@vslib.cz>)
- Fixed segfault with incomplete WM_CLASS specifications. 
- Fixed a bug about arranging subviews in a WMBox after removing a subview
  and a memleak occuring in the same situation.
- Fixed a bug in wdread


Changes since version 0.70.0:
.............................

- Disabled window birth animation by default (while it was ok with normal 
  windows, it was very annoying with menus editing in WPrefs.app)
- Added ability to shade/unshade a window using the mouse wheel.
- Fixed compilation for systems that required -lintl for WINGs
  (Jim Knoble <jmknoble@pobox.com>)
- Removed redundant include/lib paths from the get-*-flags scripts
- Updated slovak .po files (Jan Tomka <judas@linux.sk>)
- Added "Save workspace state" switch button on the exit confirmation panel
  (based on a patch sent by Jan Tomka <judas@linux.sk>)
- Fixed WPrefs crash when clicking on the menu editor to keep the current menu
  (Alexey Voinov <voins@voins.program.ru>)
- Added patch to fix some gnome issues (Les Schaffer <schaffer@optonline.net>)
- SIGTERM is now handled and saves the internal state before exiting (like
  SIGHUP and SIGINT already do). Now a "kill wmaker_pid" will exit cleanly
  saving dock/clip/session information on exit.
- Added an internal strcasecmp() to WINGs (only on systems where's not present)
- Deminiaturizing a window that is also shaded, will perform an unshade too.
  (Note that this only applies to deminiaturizing shaded windows. Unhiding 
  an application will keep the shaded/unshaded state of windows.)
- Removed compile time option for definable cursors and made them available by
  default.
- Mapping a new window that belongs to a running application that is hidden,
  will unhide the application.
- Added || pipe menu for generating non-cached menus