@@ -42,6 +42,8 @@ Changes since version 0.80.0:
 - Fixed a bug about arranging subviews in a WMBox after removing a subview
   and a memleak occuring in the same situation.
 - Fixed a bug in wdread
+- Fixed bug with windows that have WM_HINTS.take_focus = False. These windows
+  will not receive focus at all.
 
 
 Changes since version 0.70.0:
